--- a/Prevu.Synoptics.V2502_Polymer_Processor/D510.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D510.xaml
@@ -21,7 +21,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,88,0,0" VerticalAlignment="Top" ComponentName="510-27-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,158,0,0" VerticalAlignment="Top" ComponentName="510-27-CV3"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,228,0,0" VerticalAlignment="Top" ComponentName="510-27-CV4"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-VLV-BLK" Canvas.Left="290" Canvas.Top="123"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-20-VB1" Canvas.Left="290" Canvas.Top="123"/>
 
     </Canvas>
 </UserControl>
