--- a/Prevu.Synoptics.V2502_Polymer_Processor/P230.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P230.xaml
@@ -13,7 +13,7 @@
     <Canvas>
         <Labels:Pipe Color="Water" Width="63" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="777" Canvas.Top="398" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Color="Water" Width="98" RenderTransformOrigin="0.5,0.5" Height="26" StatusComponent="232-21-CV1" Canvas.Left="93" Canvas.Top="558" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right" />
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="200" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1321" Canvas.Top="515" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="200" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1351" Canvas.Top="515" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -79,7 +79,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="253" StatusComponent="282-04-MA1" Canvas.Left="1153" Canvas.Top="707" />
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="253" StatusComponent="282-04-MA1" Canvas.Left="1183" Canvas.Top="707" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="834" Canvas.Top="463" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -102,7 +102,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="288" StatusComponent="101-02-MA1" Color="Water" Canvas.Left="863" Canvas.Top="44"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="318" StatusComponent="101-02-MA1" Color="Water" Canvas.Left="863" Canvas.Top="44"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="76" StatusComponent="101-02-MA1" Color="Water" Canvas.Left="827" Canvas.Top="80">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -136,8 +136,19 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="218" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1205" Canvas.Top="229"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="218" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1312" Canvas.Top="336" >
+        <Labels:Pipe Color="ByProduct" Width="57" StatusComponent="286-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="935" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Color="ByProduct" Width="32" StatusComponent="286-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="974" Canvas.Top="380" HorizontalAlignment="Left" VerticalAlignment="Center" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="218" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1235" Canvas.Top="229"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="218" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1342" Canvas.Top="336" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -157,8 +168,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_PSP_Pit_wAgitator Canvas.Left="1062" Canvas.Top="284" Height="206" Width="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="386" StatusComponent="101-02-MA1" Color="Water" Canvas.Left="956" Canvas.Top="235">
+        <Machines:V01_PSP_Pit_wAgitator Canvas.Left="1092" Canvas.Top="284" Height="206" Width="264" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="386" StatusComponent="101-02-MA1" Color="Water" Canvas.Left="986" Canvas.Top="235">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -168,7 +179,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="204" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1105" Canvas.Top="329" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="204" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="1135" Canvas.Top="329" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -209,7 +220,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="54" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1210" Canvas.Top="682" >
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="54" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1240" Canvas.Top="682" >
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -231,7 +242,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1124" Canvas.Top="417" >
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1154" Canvas.Top="417" >
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -241,7 +252,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1182" Canvas.Top="417" >
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1212" Canvas.Top="417" >
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -251,7 +262,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="1127" Canvas.Top="711" >
+        <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="1157" Canvas.Top="711" >
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -261,7 +272,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1124" Canvas.Top="729" >
+        <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1154" Canvas.Top="729" >
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -288,7 +299,8 @@
             </Machines:V01_SCW_Screw_wHopper.RenderTransform>
         </Machines:V01_SCW_Screw_wHopper>
         <Machines:V01_RTF_Microfilter Canvas.Left="817" Canvas.Top="310" Height="132" Width="145"/>
-        <Machines:V01_DCT_Decanter Canvas.Left="1357" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DCT_Decanter Canvas.Left="1387" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="968" Canvas.Top="375" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="287-01-MA1" 
@@ -325,19 +337,19 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="233-01-MA1" Canvas.Left="578" Canvas.Top="614" />
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="101-VIEW" DetailsPageName="D101" HideComponentName="True" Canvas.Left="1311" Canvas.Top="351" />
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="101-VIEW" DetailsPageName="D101" HideComponentName="True" Canvas.Left="1341" Canvas.Top="351" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="101-02-MA1" Canvas.Left="1079" Canvas.Top="491" />
+            ComponentName="101-02-MA1" Canvas.Left="1109" Canvas.Top="491" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="101-01-MA1" Canvas.Left="1187" Canvas.Top="491" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="101-03-MA1" Canvas.Left="1051" Canvas.Top="242" />
+            ComponentName="101-01-MA1" Canvas.Left="1217" Canvas.Top="491" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="101-61-LEV" Canvas.Left="1215" Canvas.Top="351" />
+            ComponentName="101-03-MA1" Canvas.Left="1081" Canvas.Top="242" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="101-61-LEV" Canvas.Left="1245" Canvas.Top="351" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="283-01-MA1" Canvas.Left="640" Canvas.Top="35"/>
@@ -373,13 +385,13 @@
         </Labels:DeviceLabel>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="282-04-MA1" Canvas.Left="1188" Canvas.Top="626" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="282-41-LT1" Canvas.Left="1377" Canvas.Top="601" />
+            ComponentName="282-04-MA1" Canvas.Left="1218" Canvas.Top="626" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="282-71-ECS4" Canvas.Left="1054" Canvas.Top="684" />
+            ComponentName="282-41-LT1" Canvas.Left="1407" Canvas.Top="601" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="282-71-ECS4" Canvas.Left="1084" Canvas.Top="684" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="287-44-FT1" Canvas.Left="724" Canvas.Top="580" />
@@ -388,6 +400,6 @@
             ComponentName="287-01-MA1" Canvas.Left="850" Canvas.Top="591" />
         <TextBlock TextWrapping="Wrap" 
             Height="66" Width="138" TextAlignment="Center" 
-            FontSize="20" Foreground="White" Text="{lex:Loc DRAINAGE SYSTEM}" Canvas.Left="1215" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            FontSize="20" Foreground="White" Text="{lex:Loc DRAINAGE SYSTEM}" Canvas.Left="1245" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
