--- a/Prevu.Synoptics.V2502_Polymer_Processor/P464.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P464.xaml
@@ -87,9 +87,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Color="Oil" Width="26" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1004" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="CMD-OPEN"/>
+        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="CMD-CLOSE"/>
+        <Labels:Pipe Color="Oil" Width="26" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1004" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="CMD-CLOSE">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -99,7 +99,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Oil" Width="34" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1000" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Oil" Width="34" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1000" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="CMD-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
