--- a/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
@@ -313,7 +313,7 @@
             ComponentName="659-01-MA1" Canvas.Left="914" Canvas.Top="256"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="660-02-MA1" Canvas.Left="686" Canvas.Top="494"/>
+            ComponentName="660-02-MA1" Canvas.Left="692" Canvas.Top="494"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="660-01-MA1" Canvas.Left="280" Canvas.Top="580"/>
@@ -329,12 +329,12 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="670-22-CV1" Canvas.Left="1314" Canvas.Top="430"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="670-02-MA1" Canvas.Left="858" Canvas.Top="494"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="670-02-MA1" Canvas.Left="859" Canvas.Top="494"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="670-01-MA1" Canvas.Left="1269" Canvas.Top="580"/>
+            ComponentName="670-01-MA1" Canvas.Left="1271" Canvas.Top="580"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="659-21-CV1" Canvas.Left="667" Canvas.Top="365"/>
