--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -34,9 +34,9 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Width="75" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1167" Canvas.Top="375" />
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA5" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS2" Canvas.Left="1183" Canvas.Top="271"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="290" PipeHeight="Medium" StatusComponent="210-01-MA1" Height="30" Canvas.Left="655" Canvas.Top="251" />
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-21-CV1" Canvas.Left="472" Canvas.Top="367" />
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="70" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="562" Canvas.Top="496" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="290" PipeHeight="Medium" StatusComponent="210-01-MA1" Height="30" Canvas.Left="699" Canvas.Top="251" />
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="112" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-21-CV1" Canvas.Left="490" Canvas.Top="404" />
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="70" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="606" Canvas.Top="496" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -46,8 +46,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="287-01-MA1" Canvas.Left="362" Canvas.Top="367" />
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="561" Canvas.Top="567" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="287-01-MA1" Canvas.Left="388" Canvas.Top="404" />
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="605" Canvas.Top="567" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -57,7 +57,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="558" Canvas.Top="638" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="602" Canvas.Top="638" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -87,18 +87,18 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="326" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal=""  VisibilityComponent="" HorizontalAlignment="Left" Canvas.Left="236" Canvas.Top="239" VerticalAlignment="Center"/>
-    <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="444" Canvas.Top="310" VerticalAlignment="Top"/>
-    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="369" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" HorizontalAlignment="Center" Canvas.Left="163" Canvas.Top="251" VerticalAlignment="Top"/>
-    <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="566" Canvas.Top="642"/>
+    <Labels:Pipe Color="Water" Width="371" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal=""  VisibilityComponent="" HorizontalAlignment="Left" Canvas.Left="235" Canvas.Top="232" VerticalAlignment="Center"/>
+    <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="450-03-MA1" HorizontalAlignment="Left" Canvas.Left="488" Canvas.Top="314" VerticalAlignment="Center"/>
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="369" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" HorizontalAlignment="Left" Canvas.Left="197" Canvas.Top="251" VerticalAlignment="Center"/>
+    <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="610" Canvas.Top="642"/>
     <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="988" Canvas.Top="690"/>
-    <Machines:CV_Valve HorizontalAlignment="Center"  VerticalAlignment="Top" Height="38" Width="50" Canvas.Left="427" Canvas.Top="351"/>
+    <Machines:CV_Valve HorizontalAlignment="Left"  VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="451" Canvas.Top="388"/>
     <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Canvas.Left="1226" Canvas.Top="344" />
     <Machines:V01_VSP_SepTank_wHopper Canvas.Left="899" Canvas.Top="242" Height="300" Width="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_STR_PrewashReactor Canvas.Left="509" Canvas.Top="182" Height="302" Width="180"/>
-    <Machines:V01_Material_Inlet_Outlet Canvas.Left="133" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="502" Canvas.Top="524" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="502" Canvas.Top="594" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Machines:V01_STR_PrewashReactor Canvas.Left="553" Canvas.Top="182" Height="302" Width="180" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_Material_Inlet_Outlet Canvas.Left="125" Canvas.Top="218" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="546" Canvas.Top="524" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="546" Canvas.Top="594" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="921" Canvas.Top="574" Height="22" Width="116" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="922" Canvas.Top="643" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="102" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="233" Canvas.Top="197" VerticalAlignment="Center"/>
@@ -112,58 +112,68 @@
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-01-MA1" Canvas.Left="551" Canvas.Top="156"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-01-MA1" Canvas.Left="595" Canvas.Top="156"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="220-41-LT1" Canvas.Left="976" Canvas.Top="338" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="220-22-CV1" Canvas.Left="1049" Canvas.Top="560" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-21-CV1" Canvas.Left="407" Canvas.Top="389" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-21-CV1" Canvas.Left="431" Canvas.Top="426" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="220-23-CV1" Canvas.Left="1049" Canvas.Top="629" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-22-CV1" Canvas.Left="626" Canvas.Top="512" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-23-CV1" Canvas.Left="626" Canvas.Top="581" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-22-CV1" Canvas.Left="670" Canvas.Top="512" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-23-CV1" Canvas.Left="670" Canvas.Top="581" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="220-24-CV1" Width="90" Canvas.Left="1206" Canvas.Top="399" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="220-PADDLES" Canvas.Left="917" Canvas.Top="181" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-DISCHARGE" Canvas.Left="626" Canvas.Top="653" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="210-DISCHARGE" Canvas.Left="670" Canvas.Top="653" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="220-DISCHARGE" Canvas.Left="1049" Canvas.Top="701" />
     <Labels:DeviceLabel 
-            ComponentName="210-71-ECS3" HorizontalAlignment="Center" Canvas.Left="118" Canvas.Top="118" VerticalAlignment="Top"/>
+            ComponentName="210-71-ECS3" HorizontalAlignment="Left" Canvas.Left="111" Canvas.Top="156" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="210-71-ECS1" HorizontalAlignment="Center" Canvas.Left="264" Canvas.Top="117" VerticalAlignment="Top"/>
+            ComponentName="210-71-ECS1" HorizontalAlignment="Center" Canvas.Left="264" Canvas.Top="156" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="210-71-ECS5" HorizontalAlignment="Center" Canvas.Left="264" Canvas.Top="172" VerticalAlignment="Top"/>
+            ComponentName="210-71-ECS5" HorizontalAlignment="Left" Canvas.Left="376" Canvas.Top="156" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="210-71-ECS6" HorizontalAlignment="Center" Canvas.Left="358" Canvas.Top="117" VerticalAlignment="Top" />
-    <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
+            ComponentName="210-71-ECS6" HorizontalAlignment="Center" Canvas.Left="264" Canvas.Top="290" VerticalAlignment="Top" />
+    <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
             JumpFromLabel="210-21-CV1" 
-            JumpToLabel="287-01-MA1" Canvas.Left="283" Canvas.Top="334" />
+            JumpToLabel="287-01-MA1" Canvas.Left="319" Canvas.Top="371" />
     <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="220-24-CV1" 
             JumpToLabel="230-01-MA1" Canvas.Left="1325" Canvas.Top="251" />
     <Labels:JumpLabel 
             JumpFromLabel="210-01-MA1" 
-            JumpToLabel="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="389" Canvas.Top="277" VerticalAlignment="Top"/>
+            JumpToLabel="450-03-MA1" HorizontalAlignment="Left" Canvas.Left="415" Canvas.Top="281" VerticalAlignment="Center"/>
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="220-SEP-VIEW" DetailsPageName="D220" HideComponentName="True" Canvas.Left="1012" Canvas.Top="181" />
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="204" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:External.RenderTransform>
+    </Machines:External>
   </Canvas>
 </UserControl>
