V2502: Aggiustamenti vari sinottici

--- a/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
@@ -345,19 +345,10 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="440-01-MA1" Canvas.Left="812" Canvas.Top="600"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="748" Canvas.Top="727">
-      <Labels:DeviceLabel.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:DeviceLabel.RenderTransform>
-    </Labels:DeviceLabel>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="748" Canvas.Top="727"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="420-71-ECS1" Canvas.Left="157" Canvas.Top="66"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -375,19 +366,10 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="450-03-MA1" Canvas.Left="993" Canvas.Top="664"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="904" Canvas.Top="307">
-      <Labels:DeviceLabel.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:DeviceLabel.RenderTransform>
-    </Labels:DeviceLabel>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="904" Canvas.Top="307"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="420-71-ECS3" Canvas.Left="36" Canvas.Top="75"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
