--- a/Prevu.Synoptics.V2502_Polymer_Processor/OverallView.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/OverallView.xaml
@@ -14,8 +14,8 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="2950" Width="8050">
-        <Labels:Pipe Canvas.Left="1928" Canvas.Top="971" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" Width="127" StatusComponent="233-01-MA1"/>
-        <Labels:Pipe Canvas.Left="1928" Canvas.Top="1088" PipeHeight="Medium" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1">
+        <Labels:Pipe Canvas.Left="1958" Canvas.Top="966" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" Width="86" StatusComponent="233-01-MA1"/>
+        <Labels:Pipe Canvas.Left="1916" Canvas.Top="1085" PipeHeight="Medium" Width="248" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2045" Canvas.Top="1205" PipeHeight="Medium" Width="180" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="233-01-MA1"/>
+        <Labels:Pipe Canvas.Left="2036" Canvas.Top="1205" PipeHeight="Medium" Width="189" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="233-01-MA1"/>
         <Labels:Pipe Canvas.Left="3318" Canvas.Top="1133" PipeHeight="Medium" Width="297" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="430-01-MA1"/>
         <Labels:Pipe Canvas.Left="3313" Canvas.Top="1208" PipeHeight="Medium" Width="417" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="430-01-MA1"/>
         <Labels:Pipe Canvas.Left="3318" Canvas.Top="1283" PipeHeight="Medium" Width="297" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="430-01-MA1"/>
@@ -98,8 +98,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3638" Canvas.Top="389" Width="147" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" StatusComponent="460-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3415" Canvas.Top="1362" Width="179" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="460-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3570" Canvas.Top="1294" Width="140" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="460-01-MA1">
+        <Labels:Pipe Canvas.Left="3430" Canvas.Top="1368" Width="165" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="460-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3567" Canvas.Top="1297" Width="146" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="460-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -109,9 +109,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1362" Width="19" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="460-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1368" Width="19" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="460-01-MA1"/>
         <Labels:Pipe Canvas.Left="3655" Canvas.Top="1400" Width="134" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="465-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3636" Canvas.Top="1420" Width="42" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="465-01-MA1">
+        <Labels:Pipe Canvas.Left="3632" Canvas.Top="1423" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Center" StatusComponent="465-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -121,10 +121,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="3393" Canvas.Top="1439" Width="201" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="465-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1439" Width="36" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="465-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3393" Canvas.Top="1512" Width="201" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3332" Canvas.Top="1818" Width="616" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1">
+        <Labels:Pipe Canvas.Left="3437" Canvas.Top="1445" Width="158" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="465-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1445" Width="36" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="465-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3435" Canvas.Top="1518" Width="160" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="470-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3335" Canvas.Top="1821" Width="610" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -134,7 +134,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1512" Width="19" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3623" Canvas.Top="1518" Width="19" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1"/>
         <Labels:Pipe Canvas.Left="3551" Canvas.Top="2240" Width="178" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="470-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -198,9 +198,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="5148" Canvas.Top="2324" Width="144" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="530-23-CV1"/>
-        <Labels:Pipe Canvas.Left="5199" Canvas.Top="882" Width="124" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="530-23-CV1"/>
-        <Labels:Pipe Canvas.Left="5220" Canvas.Top="799" Width="124" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="520-23-CV1"/>
-        <Labels:Pipe Canvas.Left="5200" Canvas.Top="939" Width="286" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="520-23-CV1">
+        <Labels:Pipe Canvas.Left="5280" Canvas.Top="882" Width="43" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="530-23-CV1"/>
+        <Labels:Pipe Canvas.Left="5246" Canvas.Top="799" Width="99" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="520-23-CV1"/>
+        <Labels:Pipe Canvas.Left="5201" Canvas.Top="940" Width="284" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="520-23-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -225,7 +225,7 @@
         <Labels:Pipe Canvas.Left="6616" Canvas.Top="1486" PipeHeight="Medium" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="554-01-MA1"/>
         <Labels:Pipe Canvas.Left="6615" Canvas.Top="1539" PipeHeight="Medium" Width="233" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="574-01-MA1"/>
         <Labels:Pipe Canvas.Left="6675" Canvas.Top="1600" PipeHeight="Medium" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="594-01-MA1"/>
-        <Labels:Pipe Canvas.Left="6292" Canvas.Top="1162" PipeHeight="Medium" Width="656" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="554-01-MA1">
+        <Labels:Pipe Canvas.Left="6288" Canvas.Top="1158" PipeHeight="Medium" Width="664" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="554-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -235,7 +235,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="6479" Canvas.Top="1679" PipeHeight="Medium" Width="282" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="574-01-MA1">
+        <Labels:Pipe Canvas.Left="6483" Canvas.Top="1675" PipeHeight="Medium" Width="274" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="574-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -245,7 +245,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="6082" Canvas.Top="2192" PipeHeight="Medium" Width="1194" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="594-01-MA1">
+        <Labels:Pipe Canvas.Left="6088" Canvas.Top="2186" PipeHeight="Medium" Width="1182" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="594-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -255,10 +255,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="6438" Canvas.Top="1816" PipeHeight="Medium" Width="187" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="574-01-MA1"/>
-        <Labels:Pipe Canvas.Left="6391" Canvas.Top="838" PipeHeight="Medium" Width="234" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="554-01-MA1"/>
-        <Labels:Pipe Canvas.Left="6450" Canvas.Top="2784" PipeHeight="Medium" Width="234" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="594-01-MA1"/>
-        <Labels:Pipe Canvas.Left="3261" Canvas.Top="1826" Width="184" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="6438" Canvas.Top="1808" PipeHeight="Medium" Width="187" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="574-01-MA1"/>
+        <Labels:Pipe Canvas.Left="6539" Canvas.Top="829" PipeHeight="Medium" Width="86" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="554-01-MA1"/>
+        <Labels:Pipe Canvas.Left="6450" Canvas.Top="2776" PipeHeight="Medium" Width="234" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="594-01-MA1"/>
+        <Labels:Pipe Canvas.Left="3259" Canvas.Top="1824" Width="188" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -268,7 +268,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1435" Canvas.Top="197" Width="232" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="1498" Canvas.Top="197" Width="232" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -278,10 +278,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1549" Canvas.Top="311" Width="125" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Height="6"/>
-        <Labels:Pipe Canvas.Left="252" Canvas.Top="1916" Width="3103" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="63" Canvas.Top="83" Width="1490" Color="Water" StatusComponent="287-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="-84" Canvas.Top="230" Width="298" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="1612" Canvas.Top="311" Width="62" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Height="6"/>
+        <Labels:Pipe Canvas.Left="417" Canvas.Top="1916" Width="2938" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="63" Canvas.Top="83" Width="1553" Color="Water" StatusComponent="287-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="-103" Canvas.Top="249" Width="336" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="287-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -291,9 +291,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="63" Canvas.Top="377" Width="253" Color="Water" StatusComponent="287-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="3198" Canvas.Top="1736" Width="157" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="228" Canvas.Top="344" Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="63" Canvas.Top="414" Width="274" Color="Water" StatusComponent="287-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3198" Canvas.Top="1731" Width="157" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="388" Canvas.Top="376" Width="62" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -303,8 +303,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="252" Canvas.Top="320" Width="163" Color="Water" StatusComponent="450-01-MA1" Height="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="-512" Canvas.Top="1152" Width="1532" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="-328" Canvas.Top="1171" Width="1494" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -317,7 +316,7 @@
 
 
         <local:P210 Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P230 Canvas.Left="1228" Canvas.Top="192" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P230 Canvas.Left="1282" Canvas.Top="192" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P430 Canvas.Left="2045" Canvas.Top="986" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P464 Canvas.Left="3515" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P474 Canvas.Left="3515" Canvas.Top="1131" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
